[package]
name = "FindEverything"
version = "0.3.0"
edition = "2021"

[dependencies]
# 搜索核心库 (ripgrep核心库)
grep-searcher = "0.1.11"
grep-regex = "0.1.11"
grep-matcher = "0.1.6"
ignore = "0.4.20"
bstr = "1.6.0"

# 命令行参数处理
clap = { version = "4.4.0", features = ["derive"] }

# 错误处理
anyhow = "1.0.75"
thiserror = "1.0.47"

# 进度显示
indicatif = "0.17.6"

# 其他工具库
hex = "0.4.3"
regex = "1.9.3"
num_cpus = "1.16.0"
humansize = "2.1.3"
crossbeam-channel = "0.5.8"

# 日志相关
chrono = "0.4.31"

# 配置文件相关
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 系统监控相关
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"
